--- a/femme.html
+++ b/femme.html
@@ -3,57 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - Glowely</title>
-    <link rel="stylesheet" href="./style2.css">
+    <title>Femme - Glowely</title> <link rel="stylesheet" href="./style2.css">
     <link rel="shortcut icon" href="assets/logo.png" type="icon">
 </head>
-<body id="femme">
-    <div class="grid-container">
-         <!-- Début du header -->
-
-         <header class="header">
-            <div class="logo" >
-                <img class="logo" src="assets/logo.png" alt="Logo Glowely">
+<body id="femme" class="page-categorie"> <div class="grid-container">
+        <header class="header">
+            <div class="logo">
+                <img src="assets/logo.png" alt="Logo Glowely">
             </div>
             <nav class="nav">
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="femme.html">Femme</a></li>
                     <li><a href="homme.html">Homme</a></li>
-                     </ul>
+                </ul>
             </nav>
-             <div class="search">
-    <input type="text" placeholder="Recherche">
-    <a href="#"><img src="assets/Vector.png" alt="Rechercher"></a>
-   </div>
+            <div class="search">
+                <input type="text" placeholder="Recherche">
+                <a href="#"><img src="assets/Vector.png" alt="Rechercher"></a>
+            </div>
             <div class="icons">
-               
-                 <a href="#"><img src="assets/favoris.png" alt="Favoris"></a>
+                <a href="#"><img src="assets/favoris.png" alt="Favoris"></a>
                 <a href="#"><img src="assets/panier.png" alt="Panier"></a>
                 <a href="#"><img src="assets/connexion.png" alt="Connexion"></a>
-                
             </div>
-        </header> 
-
-
-        <!-- Fin du header -->
-         <!-- Début du main -->
+        </header>
         <main>
-            <div class="bijouxpourfemme">
-                <img src="assets/bijoux pour femme.png" alt="bijouxpourfemme">
+            <div class="bijouxpourfemme"> <img class="hero-image" src="assets/bijoux pour femme.png" alt="bijouxpourfemme">
             </div>
-            <h2>Collier</h2>
-            <div id="liste-colliers-femme"></div>
-            <h2>Pendentifs Femmes</h2>
-            <div id="liste-pendentifs-femme"></div>
-            <h2>Anneaux</h2>
-            <div id="liste-anneaux-femme"></div>
-            <h2>Boucles d'oreilles</h2>
-            <div id="liste-boucles-femme"></div>
+            <h2>Colliers Femme</h2>
+            <div id="liste-colliers-femme" class="liste-produits"></div> <h2>Pendentifs Femme</h2>
+            <div id="liste-pendentifs-femme" class="liste-produits"></div>
+            <h2>Anneaux Femme</h2>
+            <div id="liste-anneaux-femme" class="liste-produits"></div>
+            <h2>Boucles d'oreilles Femme</h2>
+            <div id="liste-boucles-femme" class="liste-produits"></div>
         </main>
-        <!-- Fin du Main -->
-         <!-- Fin du main -->
-        <!-- Debut du Footer -->
         <footer class="footer">
             <div class="item1">
                 <img src="assets/nosboutiques.png" alt="Nos boutiques">
@@ -67,8 +52,8 @@
                 <img src="assets/contact.png" alt="Contact">
                 <a href="contact.html">Contact</a>
             </div>
-        </footer>     <!-- Fin du footer -->
-    </div>
+        </footer>
+        </div>
     <script src="tableau.js"></script>
     <script src="script.js"></script>
 </body>
